# signatures

./: pyproject.toml
notebook/: demo.ipynb
src/signatures/: __init__.py  laplace.py  signatures.py
test/prototype/: laplace.py  signatures.py
test/test_signatures/: __init__.py  test_laplace.py  test_signatures.py
