[tool.poetry]
name = "signatures"
version = "0.1.0"
description = ""
authors = ["JingYu Ning <115336923+jrunkening@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "signatures", from = "src"},
]

[tool.poetry.dependencies]
python = "~3.12"
trimesh = "^4.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
torch = [
    { url = "https://download.pytorch.org/whl/cu118/torch-2.2.1%2Bcu118-cp312-cp312-linux_x86_64.whl#sha256=3edd204c8536fb753cffa3e684fd971297c093b63520395ec04c1b88bc8664d0", platform = "linux" },
    { url = "https://download.pytorch.org/whl/cu118/torch-2.2.1%2Bcu118-cp312-cp312-win_amd64.whl#sha256=7bcca8724f23901e4b2cd251fab1508e5855f1e52ae73259a177cfd96a647fe3", platform = "win32"}
]
numpy = "^1.26.4"
scipy = "^1.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
